completed capstone. more data optional

--- a/PY4E Course/Capstone_project/fdestinationline.htm
+++ b/PY4E Course/Capstone_project/fdestinationline.htm
@@ -9,7 +9,7 @@
         var data = google.visualization.arrayToDataTable( fdestinationline );
 
         var options = {
-          title: 'Cities Flown From by Location',
+          title: 'Cities Flown To by Location',
           chartArea: {left:'10%',top:'10%', width: '65%', height: '65%'}
         };
 
